# eigen-cuda

./: .gitignore  CMakeLists.txt  main.cpp
include/: kernel.hpp  test.hpp
src/: kernel.cpp  kernel.cu  test.cpp
